# ArkFBS

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: test-win-build.yml  wheels.yml
cpp/: flatbuffers_idl.cpp
src/ark_fbs/: __init__.pyi
src/flatbuffers_idl/: __init__.py  __init__.pyi
tests/: test_serialization.py
