[project]
name = "ark-fbs"
version = "0.1.3"
description = "FlatBuffers schema parsing + JSON<->binary helpers (pybind11)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "StarHeartHunt" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MooncellWiki/ArkFBS"
"Bug Tracker" = "https://github.com/MooncellWiki/ArkFBS/issues"

[dependency-groups]
dev = ["ruff >=0.15.0, <0.16.0", "pre-commit >=4.0.0, <5.0.0"]

[tool.scikit-build]
cmake.version = ">=3.32"
cmake.build-type = "Release"
wheel.packages = ["src/ark_fbs"]

[tool.scikit-build.cmake.define]
ARK_FBS_VENDOR_FLATBUFFERS = "ON"

[tool.cibuildwheel.linux]
archs = ["x86_64", "i686"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]

[build-system]
requires = ["scikit-build-core >=0.12", "pybind11 >=3.0"]
build-backend = "scikit_build_core.build"
